first genders section completed

--- a/04 - Pandas/HeroesOfPymoli_starter.ipynb
+++ b/04 - Pandas/HeroesOfPymoli_starter.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +125,7 @@
        "4                                       Fury   1.44  "
       ]
      },
-     "execution_count": 137,
+     "execution_count": 181,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 184,
    "metadata": {
     "scrolled": true
    },
@@ -251,7 +251,7 @@
        "0                     183           3.05                  780          2379.77"
       ]
      },
-     "execution_count": 139,
+     "execution_count": 184,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 242,
    "metadata": {},
    "outputs": [
     {
@@ -315,50 +315,38 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>SN</th>\n",
-       "      <th>Gender</th>\n",
+       "      <th>Total</th>\n",
+       "      <th>Percentage</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Lisim78</td>\n",
-       "      <td>Male</td>\n",
+       "      <th>Male</th>\n",
+       "      <td>484</td>\n",
+       "      <td>84.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Lisovynya38</td>\n",
-       "      <td>Male</td>\n",
+       "      <th>Female</th>\n",
+       "      <td>81</td>\n",
+       "      <td>14.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Ithergue48</td>\n",
-       "      <td>Male</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Chamassasya86</td>\n",
-       "      <td>Male</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Iskosia90</td>\n",
-       "      <td>Male</td>\n",
+       "      <th>Other / NA</th>\n",
+       "      <td>11</td>\n",
+       "      <td>2.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "              SN Gender\n",
-       "0        Lisim78   Male\n",
-       "1    Lisovynya38   Male\n",
-       "2     Ithergue48   Male\n",
-       "3  Chamassasya86   Male\n",
-       "4      Iskosia90   Male"
+       "            Total  Percentage\n",
+       "Male          484        84.0\n",
+       "Female         81        14.0\n",
+       "Other / NA     11         2.0"
       ]
      },
-     "execution_count": 150,
+     "execution_count": 242,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -370,7 +358,20 @@
     "# No good. This gives me 780 players (total rows). I need uniq screennames, then get value counts.\n",
     "# total_players is my total. I need to get the males, femals, other via uniq.\n",
     "#players = purchase_data[\"SN\"].unique()\n",
-    "pgenders = purchase_data.loc[:, [\"SN\",\"Gender\"]]\n"
+    "#males = purchase_data.loc[purchase_data[\"Gender\"] == \"Male\", :]\n",
+    "#print(males).value_counts()\n",
+    "#purchase_data['Gender'].value_counts()\n",
+    "genders = pd.DataFrame(purchase_data.groupby('Gender')['SN'].nunique())\n",
+    "males =  genders.loc[\"Male\",\"SN\"]\n",
+    "females = genders.loc[\"Female\",\"SN\"]\n",
+    "other =  genders.loc[\"Other / Non-Disclosed\",\"SN\"]\n",
+    "mperc = round((males / player_count) * 100)\n",
+    "fperc = round((females / player_count) * 100)\n",
+    "operc = round((other / player_count) * 100)\n",
+    "gtable = pd.DataFrame({\"Total\":[males,females,other],\n",
+    "                      \"Percentage\":[mperc,fperc,operc]},\n",
+    "                      index=[\"Male\",\"Female\",\"Other / NA\"],)\n",
+    "gtable\n"
    ]
   },
   {
