--- a/04 - Pandas/HeroesOfPymoli_starter.ipynb
+++ b/04 - Pandas/HeroesOfPymoli_starter.ipynb
@@ -888,7 +888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "metadata": {
     "scrolled": true
    },
@@ -985,14 +985,12 @@
        "Iskadarya95 Iskadarya95                 13.10  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\n",
-    "\n",
     "spenders_df = purchase_data.groupby([\"SN\"])\n",
     "\n",
     "# Why does this work differently when I use Purchase ID instead of SN? \n",
@@ -1046,14 +1044,128 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 24,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/anaconda2/envs/PythonData/lib/python3.6/site-packages/ipykernel_launcher.py:8: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "  \n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Item ID</th>\n",
+       "      <th>Item Name</th>\n",
+       "      <th>Price</th>\n",
+       "      <th>Purchase Counts</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>108</td>\n",
+       "      <td>Extraction, Quickblade Of Trembling Hands</td>\n",
+       "      <td>3.53</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>143</td>\n",
+       "      <td>Frenzied Scimitar</td>\n",
+       "      <td>1.56</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>92</td>\n",
+       "      <td>Final Critic</td>\n",
+       "      <td>4.88</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>100</td>\n",
+       "      <td>Blindscythe</td>\n",
+       "      <td>3.27</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>131</td>\n",
+       "      <td>Fury</td>\n",
+       "      <td>1.44</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Item ID                                  Item Name  Price  Purchase Counts\n",
+       "0      108  Extraction, Quickblade Of Trembling Hands   3.53                9\n",
+       "1      143                          Frenzied Scimitar   1.56                6\n",
+       "2       92                               Final Critic   4.88                8\n",
+       "3      100                                Blindscythe   3.27                5\n",
+       "4      131                                       Fury   1.44                5"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "items_df = purchase_data[[\"Item ID\", \"Item Name\", \"Price\"]]\n",
+    "\n",
+    "grouped_items = items_df.groupby([\"Item ID\",\"Item Name\"])\n",
+    "item_count = grouped_items.count()\n",
+    "#item_count.head()\n",
+    "item_value = grouped_items.sum()\n",
+    "\n",
+    "items_df[\"Purchase Counts\"] = items_df.groupby([\"Item ID\", \"Item Name\"]).transform(len)\n",
+    "#items_df[\"Total Value\"] = items_df.groupby([\"Item ID\", \"Item Name\"]).sum()\n",
+    "items_df.head()\n",
+    "#item_value = items_df.groupby([\"Item ID\", \"Item Name\"]).transform(sum)\n",
+    "#items_df[\"Total Value\"] = item_value\n",
+    "#item_value.head()\n",
+    "\n",
+    "#item_summary = pd.DataFrame({\"Purchase Count\":[item_count],\n",
+    "#                             \"Item Price\":\"\",\n",
+    "#                             \"Total Purchase Value\":[item_value]\n",
+    "#                            })\n",
+    "\n",
+    "\n",
     "## I couldn't get this one working. \n",
-    "## I will need some assistance here.\n"
+    "## I will need some assistance here.\n",
+    "\n"
    ]
   },
   {
